Added three pop system figures

--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -753,6 +753,24 @@ Y_{t+1} &=& Y_t\left(r_y-r_y Y_t-B_{yx} X_t-B_{yz} Z_t\right)\\
 Z_{t+1} &=& Z_t\left(r_z-r_z Z_t-B_{zx} X_t-B_{zy} Y_t\right)
 \end{eqnarray*}
 where all the parameters are non-negative real numbers.
+\begin{figure}[h!t]
+\centering
+\label{fig:ThreePopFig1}
+\includegraphics[scale=0.5]{graphics/ThreePopFig1.eps}
+\caption{$XZ$ and $ZX$ plots.}
+\end{figure}
+\begin{figure}[h!t]
+\centering
+\label{fig:ThreePopFig2}
+\includegraphics[scale=0.5]{graphics/ThreePopFig2.eps}
+\caption{$YZ$ and $ZY$ plots.}
+\end{figure}
+\begin{figure}[h!t]
+\centering
+\label{fig:ThreePopFig3}
+\includegraphics[scale=0.5]{graphics/ThreePopFig3.eps}
+\caption{$XY$ and $YX$ plots.}
+\end{figure}
 
 \subsection{Lorenz System}
 Consider the following system of equations:
